@@ -2,7 +2,7 @@
 # Sourcing this file into Tcl runs the tests and generates output for errors.
 # No output means no errors were found.
 #
-# Copyright (c) 2006-2008 Donal K. Fellows
+# Copyright (c) 2006-2011 Donal K. Fellows
 #
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
@@ -29,15 +29,9 @@ if {[testConstraint memory]} {
 	return [expr {$end - $tmp}]
     }
 }
-
-proc initInterpreter name {
-    $name eval [list package ifneeded TclOO [package provide TclOO] \
-		    [package ifneeded TclOO [package provide TclOO]]]
-}
 
 test oo-0.1 {basic test of OO's ability to clean up its initial state} {
     interp create t
-    initInterpreter t
     t eval {
 	package require TclOO
     }
@@ -45,11 +39,11 @@ test oo-0.1 {basic test of OO's ability to clean up its initial state} {
 } {}
 test oo-0.2 {basic test of OO's ability to clean up its initial state} {
     set i [interp create]
-    initInterpreter $i
     interp eval $i {
 	package require TclOO
 	namespace delete ::
     }
+    interp delete $i
 } {}
 test oo-0.3 {basic test of OO's ability to clean up its initial state} -body {
     leaktest {
@@ -72,7 +66,6 @@ test oo-0.5 {testing literal leak on interp delete} memory {
 } 0
 test oo-0.6 {cleaning the core class pair; way #1} -setup {
     interp create t
-    initInterpreter t
 } -body {
     t eval {
 	package require TclOO
@@ -84,7 +77,6 @@ test oo-0.6 {cleaning the core class pair; way #1} -setup {
 } -result {0 {} 1 {invalid command name "object"}}
 test oo-0.7 {cleaning the core class pair; way #2} -setup {
     interp create t
-    initInterpreter t
 } -body {
     t eval {
 	package require TclOO
@@ -106,6 +98,10 @@ test oo-0.8 {leak in variable management} -setup {
 } -cleanup {
     foo destroy
 } -result 0
+test oo-0.9 {various types of presence of the TclOO package} {
+    list [lsearch -nocase -all -inline [package names] tcloo] \
+	[package present TclOO] [package versions TclOO]
+} [list TclOO $::oo::version $::oo::version]
 
 test oo-1.1 {basic test of OO functionality: no classes} {
     set result {}
@@ -272,7 +268,6 @@ test oo-2.1 {basic test of OO functionality: constructor} -setup {
     # This is a bit complex because it needs to run in a sub-interp as
     # we're modifying the root object class's constructor
     interp create subinterp
-    initInterpreter subinterp
     subinterp eval {
 	package require TclOO
     }
@@ -340,7 +335,6 @@ test oo-3.1 {basic test of OO functionality: destructor} -setup {
     # This is a bit complex because it needs to run in a sub-interp as we're
     # modifying the root object class's constructor
     interp create subinterp
-    initInterpreter subinterp
     subinterp eval {
 	package require TclOO
     }
@@ -361,7 +355,6 @@ test oo-3.2 {basic test of OO functionality: destructor} -setup {
     # This is a bit complex because it needs to run in a sub-interp as
     # we're modifying the root object class's constructor
     interp create subinterp
-    initInterpreter subinterp
     subinterp eval {
 	package require TclOO
     }
